--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <meta property="og:title" content="DFT Consult - AI-Powered Fintech Solutions" />
     <meta property="og:description" content="Leading AI-powered fintech solutions for banking, finance, and insurance sectors in East Africa." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/dft-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/dft-logo.png" />
+    <meta name="twitter:image" content="" /> 
+    
   </head>
 
   <body>
