--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:title" content="DFT Consult - AI-Powered Fintech Solutions" />
     <meta property="og:description" content="Leading AI-powered fintech solutions for banking, finance, and insurance sectors in East Africa." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/dft-logo.png" />
+    <meta property="og:image" content="/Screenshot_2025-10-28_183536-removebg-preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/dft-logo.png" />
+    <meta name="twitter:image" content="/Screenshot_2025-10-28_183536-removebg-preview.png" />
 
     <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" href="/dft-logo.png" />
+    <link rel="icon" type="image/png" href="/Screenshot_2025-10-28_183536-removebg-preview.png" />
   </head>
 
   <body>
