--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- ✅ Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="google-site-verification" content="LkRxx82mxO8yJ081RyNnJmWheBfhuvSspfRT-R25abE" />
   </head>
 
   <body>
